removed endpoints
