# src/datacatalog/handlers/__init__.py
@@ -1,1 +1,1 @@
-from . import datasets, index, openapi, owners, systemhealth, themes
+from . import datasets, index, openapi, systemhealth
